--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.akentech</groupId>
-	<artifactId>springJwt</artifactId>
+	<artifactId>Springboot-security-with-JWT-Updated</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>springJwt</name>
 	<description>Demo project for Spring Boot</description>
